--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react_ujs": "^2.6.1",
+    "tailwindcss": "1.9.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
