--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "file-saver": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-spinners": "^0.10.6",
     "react-table": "^7.6.3",
     "react-toastify": "^7.0.3",
     "react_ujs": "^2.6.1",
